# coindrafts-linera

./: .dockerignore  .env.example  .gitignore  ACTUAL-IMPLEMENTATION-STATUS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  ROADMAP.md  ROUNDS-CONCEPT-NOTES.md  USER-TESTING-GUIDE.md  build-log.txt  coindrafts-structure.md  compose.yaml  dev-setup.sh  docker-compose.yml  docusaurus.config.js  logic  next-steps-for-admin.md  next-steps.md  notes  package-lock.json  package.json  run.bash  run.bash.option1  run.bash.option2  seed-data.js  sidebars.js  steps  test-all-flows.js  test-coincap-api.js  test-graphql-phase2.js  test-price-predictions.js  test-settle-only.js
backend/: DEPLOYMENT_INFO.md
backend/applications/coindrafts-core/: Cargo.toml
backend/applications/coindrafts-core/src/: contract.rs  lib.rs  service.rs  state.rs
backend/applications/coindrafts-core/src/types/: constants.rs  error.rs  game.rs  mod.rs  player.rs  portfolio.rs  scoring.rs  validation.rs
backend/applications/price-prediction/: Cargo.toml
backend/applications/price-prediction/src/: contract.rs  lib.rs  service.rs  state.rs
backend/applications/simple-todo/: Cargo.toml
backend/applications/simple-todo/src/: contract.rs  lib.rs  service.rs  state.rs
backend/applications/traditional-leagues/: Cargo.toml
backend/applications/traditional-leagues/src/: contract.rs  lib.rs  service.rs  state.rs
backend/scripts/: build.sh  complete-setup.sh  deploy-traditional-leagues.sh  deploy.sh  health-check.sh  set-env.sh  start-local.sh
docs/: intro.md
docs/architecture/: complete-overview.md
docs/game-modes/: overview.md  price-range-prediction.md  quick-match.md  traditional-leagues.md
docs/getting-started/: installation.md
docs/linera-architecture/: overview.md  protocol-integration.md
docs/strategy-systems/: overview.md
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: appkit.ts  coinDraftsClient.ts  coinDraftsService.ts  config.ts  lineraClient.ts  stores.ts  todoService.ts  walletService.ts
frontend/src/lib/components/: AISuggestionCard.svelte  AchievementNotification.svelte  ActivityFeed.svelte  GameResults.svelte  GameWinnersDisplay.svelte  Navigation.svelte  ShareButton.svelte  Toast.svelte  ToastContainer.svelte  TournamentChart.svelte  WalletConnect.svelte  WalletConnectModal.svelte
frontend/src/lib/data/: cryptoCategories.ts
frontend/src/lib/services/: activityService.ts  aiSuggestionService.ts  pricePredictionService.ts  priceService.spec.ts  priceService.ts  profileService.ts  shareService.ts
frontend/src/lib/stores/: toasts.ts  wallet.ts
frontend/src/lib/utils/: dateFormatter.ts
frontend/src/lib/wallet/: linera-signer.ts
frontend/src/routes/: +layout.svelte  +page.svelte  dashboard.svelte  portfolio.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/api/ai-price-suggestion/: +server.ts
frontend/src/routes/api/ai-suggestion/: +server.ts
frontend/src/routes/api/crypto-price/: +server.ts
frontend/src/routes/chart-test/: +page.svelte
frontend/src/routes/games/[gameId]/: +page.svelte
frontend/src/routes/games/[gameId]/submit/: +page.svelte
frontend/src/routes/leaderboard/: +page.svelte
frontend/src/routes/predictions/: +page.svelte
frontend/src/routes/predictions/[marketId]/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/profile/[account]/: +page.svelte
frontend/src/routes/quick-match/: +page.svelte
frontend/src/routes/tournaments/: +page.svelte
frontend/src/routes/tournaments/[tournamentId]/: +page.svelte
frontend/src/routes/tournaments/[tournamentId]/draft/: +page.svelte
frontend/src/routes/tournaments/[tournamentId]/leaderboard/: +page.svelte
scripts/: populate-leaderboard.js  preseed-leaderboard.js
src/components/HomepageFeatures/: index.js
src/pages/: index.js
