[workspace]
members = [
    "backend/applications/simple-todo",
]
resolver = "2"

[workspace.dependencies]
# Linera SDK dependencies
linera-sdk = "0.15.3"
linera-views = "0.15.3"
linera-base = "0.15.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# GraphQL
async-graphql = "7.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"