[workspace]
members = [
    "backend/applications/coindrafts-core",
    "backend/applications/traditional-leagues",
    "backend/applications/price-prediction",
    # Future game mode applications:
    # "backend/applications/quick-match", 
    # "backend/applications/price-oracle",
    # "backend/applications/player-state",
    # "backend/applications/reward-system",
]
resolver = "2"

[workspace.dependencies]
# Linera SDK dependencies
linera-sdk = "0.15.3"
linera-views = "0.15.3"
linera-base = "0.15.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["macros", "rt"] }
futures = "0.3"
async-trait = "0.1"

# GraphQL
async-graphql = "7.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"