[package]
name = "price-prediction"
version = "0.1.0"
edition = "2021"

[dependencies]
# Linera SDK
linera-base = { workspace = true }
linera-sdk = { workspace = true }
linera-views = { workspace = true }

# Async GraphQL for service layer
async-graphql = { workspace = true }

# Standard dependencies
serde = { workspace = true }
thiserror = "1.0"

[[bin]]
name = "price_prediction_contract"
path = "src/contract.rs"

[[bin]]
name = "price_prediction_service"
path = "src/service.rs"

[lib]
crate-type = ["cdylib", "rlib"]
