[package]
name = "simple-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.17"
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "simple_todo_contract"
path = "src/contract.rs"

[[bin]]
name = "simple_todo_service"
path = "src/service.rs"
