[package]
name = "traditional-leagues"
version = "0.1.0"
edition = "2021"
description = "Traditional Leagues - Complex tournament management for CoinDrafts"

[dependencies]
# Linera SDK
linera-base = { workspace = true }
linera-sdk = { workspace = true }
linera-views = { workspace = true }

# Async GraphQL for service layer
async-graphql = { workspace = true }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

[[bin]]
name = "traditional_leagues_contract"
path = "src/contract.rs"

[[bin]]
name = "traditional_leagues_service"
path = "src/service.rs"

[lib]
crate-type = ["cdylib", "rlib"]